Changed UserMapper and VacancyMapper, Fixed issues