@@ -1,32 +1,37 @@
 package bekezhan.io.lab7.contoller;
 
 import bekezhan.io.lab7.dto.UserDTO;
-import bekezhan.io.lab7.dto.VacancyDTO;
 import bekezhan.io.lab7.mapper.UserMapper;
-import bekezhan.io.lab7.mapper.VacancyMapper;
-import bekezhan.io.lab7.service.UserService;
-import bekezhan.io.lab7.service.VacancyService;
+import bekezhan.io.lab7.service.UserServiceImpl;
 import lombok.RequiredArgsConstructor;
+import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
-@RequestMapping("/api/users/")
+@RequestMapping("/api/users")
 @RequiredArgsConstructor
 public class UserController {
-    private final UserService userService;
-    private final VacancyService vacancyService;
-    private final UserMapper  userMapper;
-    private final VacancyMapper vacancyMapper;
+
+    private final UserServiceImpl userService;
+    private final UserMapper userMapper;
 
     @GetMapping
-    public List<UserDTO> findAll() {
-        return userService.getAllUsers().stream().map(userMapper::toDTO).collect(Collectors.toList());
+    public List<UserDTO> getAll() {
+        return userService.findAll()
+                .stream()
+                .map(userMapper::toDTO)
+                .toList();
     }
+
+    @GetMapping("/{id}")
+    public UserDTO getById(@PathVariable Long id) {
+        return userMapper.toDTO(userService.findById(id));
+    }
+
     @PostMapping("/register")
-    public UserDTO registerUser(
+    public UserDTO register(
             @RequestParam String username,
             @RequestParam int age,
             @RequestParam String role,
@@ -37,36 +42,28 @@ public class UserController {
         dto.setAge(age);
         dto.setRole(role);
         dto.setPassword(password);
+
         return userMapper.toDTO(userService.register(dto));
     }
 
     @PostMapping("/apply")
-    public UserDTO applyToVacancy(@RequestParam Long userId,
-                                  @RequestParam Long vacancyId)
-    {
-        return userMapper.toDTO(userService.applyToVacancy(userId, vacancyId));
-    }
-    @PostMapping("/approve")
-    public UserDTO approveUserForVacancy(
+    public UserDTO apply(
             @RequestParam Long userId,
             @RequestParam Long vacancyId
     ) {
-        return userMapper.toDTO(userService.approveUserToVacancy(userId, vacancyId));
-    }
-    @GetMapping("/vacancies")
-    public List<VacancyDTO> getAllVacancies() {
-        return vacancyService.findAll().stream()
-                .map(vacancyMapper::toVacancyDTO)
-                .collect(Collectors.toList());
+        return userMapper.toDTO(userService.apply(userId, vacancyId));
     }
 
-    @DeleteMapping("/{id}")
-    public void deleteUser(@PathVariable Long id) {
-        userService.deleteUser(id);
+    @PostMapping("/approve")
+    public UserDTO approve(
+            @RequestParam Long userId,
+            @RequestParam Long vacancyId
+    ) {
+        return userMapper.toDTO(userService.approve(userId, vacancyId));
     }
 
     @PutMapping("/{id}")
-    public UserDTO updateUser(
+    public UserDTO update(
             @PathVariable Long id,
             @RequestParam(required = false) String username,
             @RequestParam(required = false) Integer age,
@@ -74,12 +71,18 @@ public class UserController {
             @RequestParam(required = false) String password
     ) {
         UserDTO dto = new UserDTO();
-        dto.setUsername(username);
-        if (age != null) {
-            dto.setAge(age);
-        }
-        dto.setRole(role);
-        dto.setPassword(password);
-        return userMapper.toDTO(userService.updateUser(id, dto));
+        if (username != null) dto.setUsername(username);
+        if (age != null) dto.setAge(age);
+        if (role != null) dto.setRole(role);
+        if (password != null) dto.setPassword(password);
+
+        return userMapper.toDTO(userService.update(id, dto));
+    }
+
+    @DeleteMapping("/{id}")
+public ResponseEntity<Void> delete(@PathVariable Long id) {
+        userService.delete(id);
+        return ResponseEntity.noContent().build();
+
     }
 }
